tests/TOSORT/global/misc.c

int a = 5; // no error
int b = a; // error